# PeroCore

./: .gitignore  BROWSER_BRIDGE_DESIGN.md  BUILD_GUIDE.md  LICENSE  NIT_RUST_MIGRATION_RFC.md  NIT_TECHNICAL_MANUAL.md  PeroCore_Architecture.md  Pero_Memory_System_Analysis.md  README.md  README_EN.md  SECURITY.md  SOCIAL_CONNECTIVITY_DESIGN.md  build_all.bat  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  一键启动.bat  启动3D预览.bat
.github/: PACKAGING_STRATEGY.md
.github/workflows/: build-electron.yml  pypi-publish.yml  release.yml  release.yml.bak
PeroLauncher/: !!!LOOKING ME!!!.md  Cargo.toml  tauri.conf.json  tauri.conf.pkg.json
PeroLauncher/.cargo/: config.toml
PeroLauncher/capabilities/: default.json
PeroLauncher/src/: everything.rs  lib.rs  main.rs  napcat.rs  plugins.rs
View3D/: Cargo.toml  fix_glb_mesh_data.py  generate_models.py  index.html  inspect_glb.py  inspect_glb_weights.py  models_list.js  renderer.js
View3D/assets/gs_yanfei/: arm.json  extra.animation.json  main.json  (+1 more)
View3D/src/: main.rs
backend/: config.json  database.py  debug_agents.py  main.py  models.py  pero-backend.spec  requirements.txt
backend/core/: config_manager.py  nit_manager.py  plugin_manager.py
backend/data/: config.json
backend/debug/: debug_history.py  sync_memory.py  test_isolation.py  test_retrieval.py  update_db_schema.py  verify_prompt_refactor.py
backend/nit_core/: bridge.py  dispatcher.py  parser.py  security.py
backend/peroproto/: perolink_pb2.pyi  perolink_pb2_grpc.py
backend/prompts/: scorer_prompt.md
backend/proto/: perolink_pb2.py
backend/routers/: agent_router.py  group_chat_router.py  ide_router.py  scheduler_router.py
backend/rust_core/: Cargo.toml  README_LIB.md  pyproject.toml
backend/rust_core/src/: aura_vision.rs  intent_engine.rs  lib.rs  vision_intent_memory.rs
backend/services/: agent_manager.py  agent_service.py  asr_service.py  audio_processor.py  aura_vision_service.py  browser_bridge_service.py  chain_service.py  companion_service.py  embedding_service.py  gateway_client.py  group_chat_service.py  llm_service.py  mcp_service.py  memory_secretary_service.py  memory_service.py  multimodal_trigger_service.py  prompt_service.py  realtime_session_manager.py  reflection_service.py  scheduler_service.py  scorer_service.py  screenshot_service.py  session_service.py  social_service.py  task_manager.py  time_awareness_service.py  tts_service.py  vector_service.py  vector_store_service.py  voice_manager.py
backend/utils/: logging_config.py  memory_file_manager.py  screen_adapter.py  workspace_utils.py
backend/vision_core/: Cargo.toml  pyproject.toml
backend/vision_core/src/: aura_vision.rs  lib.rs  vision_intent_memory.rs
benchmarks/: 01_rag_vs_perocore.py  02_massive_scale_performance.py  03_cognitive_precision.py  04_story_intent_reasoning.py  05_scientific_rag_validation.py  06_hotpotqa_multi_hop.py  07_hotpotqa_official_eval.py  08_companion_memory_recall_test.py  DIFFUSION_1000B_REPORT.md  MEMORY_HARDCORE_TEST_REPORT.md  MEMORY_LOGIC_VERIFICATION_REPORT.md  MEMORY_ULTIMATE_TEST_REPORT.md  README.md  aura_vision_benchmark.py  benchmark_1_massive_scale.py  benchmark_2_multi_hop_reasoning.py  benchmark_3_real_world_integration.py  chroma_logic_test.py  cognitive_precision_test.py  high_complexity_stress_test.py  hotpot_eval_utils.py  lateral_inhibition_test.py  memory_stress_test.py  neko_vs_pero_benchmark.py  optimize_onnx_model.py  perocore_reasoning_benchmark.py  perocore_vs_rag_battle.py  rag_latency_battle.py  run_all_benchmarks.py  run_competitive_test.py  story_reasoning_test.py  stress_test_100m.py  test_memory_hardcore.py  test_memory_service_logic.py  test_memory_ultimate.py
benchmarks/internal_tests/: diffusion_1b_benchmark.py  internal_test_1_memory_system.py  internal_test_2_aura_vision.py  internal_test_3_theoretical_limits.py
benchmarks/reports/: CONSOLIDATED_BENCHMARK_REPORT.md  KDN_mathematical_proof.md  PEROCORE_FULL_BENCHMARK_REPORT.md  companion_recall_results.md  hotpotqa_results.md  scientific_rag_results.md
browser_extension/: background.js  content_script.js  manifest.json  popup.html  popup.js
build_tools/: build_backend.py  pack.ps1
docker/: Dockerfile.backend  Dockerfile.gateway  Dockerfile.web  nginx.conf
docs/: BUILD_GUIDE.md  NIT_TECHNICAL_MANUAL.md  Pero_Memory_System_Analysis.md  TAURI_DEV_PERFORMANCE_GUIDE.md
electron/: main.cjs  tsconfig.json
electron/main/: index.ts
electron/preload/: index.ts
gateway/: go.mod
gateway/gateway/: gateway.syso  main.go
gateway/proto/: perolink.pb.go  perolink.proto
public/live2d-widget/: autoload.js  waifu-config.js  waifu-tips.js
scripts/: copy-gateway.js
src/: App.vue  config.js  main.js  router.js  style.css
src/api/: gateway.ts
src/components/: AsyncMarkdown.vue  FileSearchModal.vue  NapCatTerminal.vue  ReActProcessViewer.vue  TerminalPanel.vue
src/utils/: ipcAdapter.ts
src/views/: ChatModeView.vue  DashboardView.vue  IdeView.vue  LauncherView.vue  MainWindow.vue  Pet3DView.vue  PetView.vue  TaskMonitorView.vue  VoiceConfigPanel.vue  WorkModeView.vue
tech_docs/: ASYNC_PITFALLS_GUIDE.md  BUILD_GUIDE.md  ENGINEERING_THOUGHTS.md  NIT_TECHNICAL_MANUAL.md  PHASE_2_EVOLUTION_PLAN.md  PHASE_2_REFACTORING_ROADMAP.md  PeroCore_Architecture.md  Pero_Memory_System_Analysis.md  Pero_Vision_Intent_System.md  Refactoring_MultiAgent.md  Vision_System_Verification_Report.md
wiki/: index.md
wiki/.vitepress/: config.mts
wiki/core-systems/: mdp.md  memory.md  nit.md  spreading-activation.md
wiki/ecosystem/: mobile.md  social.md  workshop.md
wiki/guide/: intro.md  usage.md
wiki/peripheral-systems/: bedrock.md  character.md
(+380 files in other folders)
