[package]
name = "pero_launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
colored = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6"
winreg = "0.50"
sysinfo = "0.30"
directories = "5.0"
which = "6.0"
indicatif = "0.17"
tempfile = "3.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
open = "5.1"
tokio = { version = "1", features = ["full"] }
