[package]
name = "pero_launcher"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "PolyForm-Noncommercial-1.0.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
zip = "0.6"
winreg = "0.52"
sysinfo = "0.30"
which = "6.0"
anyhow = "1.0"
regex = "1.10"
