[package]
name = "pero-rust-core"
version = "0.2.1"
edition = "2021"
description = "High-performance memory and cognitive graph engine for Pero"
license = "GPL-3.0"
authors = ["YoKONCy <yokoncy@gmail.com>"]

[lib]
name = "pero_rust_core"
crate-type = ["cdylib"]

[dependencies]
# 核心算法依赖 (保持轻量)
ahash = "0.8"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py310"] }

# 向量索引 (可选 HNSW)
usearch = { version = "2.8", optional = true }

[features]
default = []
hnsw = ["usearch"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
