[package]
name = "pero_vision_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pero_vision_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 依赖核心扩散激活引擎
pero_memory_core = { path = "../rust_core" }

# Python 绑定
pyo3 = { version = "0.21", features = ["extension-module"] }

# Tract ONNX 推理
tract-onnx = { version = "0.21" }

# 图像处理
image = { version = "0.25" }

# 工具库
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.15.1"
ahash = "0.8"
