[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "pero-vision-core"
version = "0.1.0"
description = "High-performance vision engine for Pero"
license = { text = "GPL-3.0" }
authors = [
    { name = "PeroCore Developer" }
]
requires-python = ">=3.8"
dependencies = []
keywords = ["AI", "Vision", "Rust", "ONNX"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[tool.maturin]
module-name = "pero_vision_core"
features = ["pyo3/extension-module"]
